--- a/public/__manifest.json
+++ b/public/__manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Cek Pajak Kendaraan Bermotor",
-    "short_name": "cekpajakdotinfo",
+    "name": "Informasi Samsat",
+    "short_name": "SamsatDotInfo",
     "start_url": "index.html",
     "display": "standalone",
     "scope" : "/",
