--- a/public/__manifest.json
+++ b/public/__manifest.json
@@ -4,8 +4,8 @@
     "start_url": "index.html",
     "display": "standalone",
     "scope" : "/",
-    "background_color": "#000000",
-    "theme_color": "#000000",
+    "background_color": "#ffffff",
+    "theme_color": "#01579B",
     "orientation": "portrait",
     "icons": [
         {
